Multi-arg support

--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -3,8 +3,8 @@
 		<title>A test</title>
 	</head>
 	<body>
-		<h1>Welcome to {{software_title}}</h1>
-		<p>This is a test of {{software_title|upper}}.  It was written by {{author|ucwords}} in the year {{year}}. It is written in {{language|strtoupper}} and is stored in {{rcs|ucfirst}}. </p>
+		<h1>Welcome to {{software_title|upper|rot13}}</h1>
+		<p>This is a test of {{software_title|lower}}.  It was written by {{author|ucwords}} in the year {{year}}. It is written in {{language|upper}} and is stored in {{rcs|ucfirst}}. </p>
 		<p>It has basic skills, such as escaping text: 
 		<code>{{test_text|e}}</code>
 		</p>
