--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -8,7 +8,7 @@
 		<p>It has basic skills, such as escaping text: 
 			<code>{{test_text|e}}</code>
 		</p>
-		<p>It supports simple functions, such as rot13 - {{software_title|rot13}} - and juggling case - {{software_title|lower}}. It also can chain functions, such as uppercasing and rot13: {{software_title|upper|rot13}}
+		<p>It supports simple functions, such as rot13 - {{software_title|rot13}} - and juggling case - {{software_title|lower}}. It also can chain functions, such as uppercasing and sha1: {{software_title|upper|sha1}}
 		</p>
 	</body>
 </html>
