--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h1>WELCOME TO {{software_title|upper}}</h1>
-		<p>This is a test of {{software_title}}.  It was written by {{author|ucwords}}, current date is {{date|M d, Y}}. It is written in {{language|upper}} and is stored in {{rcs|ucfirst}}. </p>
+		<p>This is a test of {{software_title}}.  It was written by {{author|ucwords}}, current date is {{date|M d, Y}}. It is written in {{language|upper}}.</p>
 		<p>It has basic skills, such as escaping text: 
 			<code>{{test_text|e}}</code>
 		</p>
