--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -9,6 +9,7 @@
 			<code>{{test_text|e}}</code>
 		</p>
 		<p>It supports simple functions, such as rot13 - {{software_title|rot13}} - and juggling case - {{software_title|lower}}. </p>
+		<p>It supports custom functions: {{software_title|custom_function}}. </p>
 		<p>It also can chain functions, such as uppercasing and rot13: {{software_title|upper|rot13}}. </p>
 		<p>Here is a function that was dynamically added, sha1: {{random|sha1}}</p>
 		<p>Here is an example of a dynamic unique identifier: {{uniqid}}.</p>
