--- a/templates/demo1.tmpl
+++ b/templates/demo1.tmpl
@@ -8,9 +8,9 @@
 		<p>It has basic skills, such as escaping text: 
 			<code>{{test_text|e}}</code>
 		</p>
-		<p>It supports simple functions, such as rot13 - {{software_title|rot13}} - and juggling case - {{software_title|lower}}. </p>
+		<p>It supports simple functions, such as str_rot13 - {{software_title|str_rot13}} - and juggling case - {{software_title|lower}}. </p>
 		<p>It supports custom functions: {{software_title|custom_function}}. </p>
-		<p>It also can chain functions, such as uppercasing and rot13: {{software_title|upper|rot13}}. </p>
+		<p>It also can chain functions, such as uppercasing and rot13: {{software_title|upper|str_rot13}}. </p>
 		<p>Here is a function that was dynamically added, sha1: {{random|sha1}}</p>
 		<p>Here is an example of a dynamic unique identifier: {{uniqid}}.</p>
 	</body>
