--- a/templates/demo1.tmpl
+++ b/templates/demo1.tmpl
@@ -12,6 +12,6 @@
 		<p>It supports custom functions: {{software_title|custom_function}}. </p>
 		<p>It also can chain functions, such as uppercasing and rot13: {{software_title|upper|str_rot13}}. </p>
 		<p>Here is a function that was dynamically added, sha1: {{random|sha1}}</p>
-		<p>Here is an example of a dynamic unique identifier: {{uniqid}}.</p>
+		<p>Here is an example of a dynamic unique identifier: [[uniqid]].</p>
 	</body>
 </html>
