--- a/templates/demo1.tmpl
+++ b/templates/demo1.tmpl
@@ -10,8 +10,9 @@
 		</p>
 		<p>It supports simple functions, such as str_rot13 - {{software_title|str_rot13}} - and juggling case - {{software_title|lower}}. </p>
 		<p>It supports custom functions: {{software_title|custom_function}}. </p>
-		<p>It also can chain functions, such as uppercasing and rot13: {{software_title|upper|str_rot13}}. </p>
+		<p>It also can chain functions, such as uppercasing and str_rot13: {{software_title|upper|str_rot13}}. </p>
 		<p>Here is a function that was dynamically added, sha1: {{random|sha1}}</p>
 		<p>Here is an example of a dynamic unique identifier: [[uniqid]].</p>
+		<p>You can use <b>substr</b>: <i>{{longstring|substr:3:10}}</i>. A long string can be quickly shortened using the shortcut function <b>ellipses</b>: <i>{{longstring|ellipses:18}}</i></p>
 	</body>
 </html>
