--- a/templates/demo3.tmpl
+++ b/templates/demo3.tmpl
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h1>ABOUT THE BAND {{bandname|upper}}</h1>
-		<p>The band {{bandname|ucfirst}} formed in {{year_formed}}.  They've released {{number_albums}} studio albums. Some members of the band are: </p>
+		<p>The band {{bandname|ucfirst}} formed in {{year_formed}}.  They've released {{number_albums|intval}} studio albums. Some members of the band are: </p>
 		<ul>
 			{{bandlist}}
 		</ul>
