--- a/templates/demo4-1.tmpl
+++ b/templates/demo4-1.tmpl
@@ -5,6 +5,6 @@
 	<body>
 		<h1>ABOUT {{subject|upper}}</h1>
 		<p>Everyone should learn about {{subject}}. I learned in {{grade|int}}{{suffix|sup}} grade. Below is what I learned.</p>
-		{{%template|demo4-2.tmpl}}
+		{{@template file=demo4-2.tmpl}}
 	</body>
 </html>
