--- a/templates/demo4-2.tmpl
+++ b/templates/demo4-2.tmpl
@@ -1,3 +1,3 @@
 <p>I learned all about {{subject|lower}} in school. My favorite fact is: {{fact}}. I still remember this stuff in [[year]]. </p>
 
-<p>{{%template|demo4-3.tmpl}}</p>
+<p>{{@template file=demo4-3.tmpl}}</p>
